--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="gray">#B0CCCCCC</color>
     <color name="bg">#010C02</color>
     <color name="btns">#FD7C53</color>
+    <color name="orange">#ed5f1e</color>
 </resources>
