--- a/app/src/main/res/layout/pass_item.xml
+++ b/app/src/main/res/layout/pass_item.xml
@@ -12,6 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
+        android:layout_marginTop="4dp"
         android:padding="16dp">
 
         <RelativeLayout
@@ -29,6 +30,23 @@
                 android:textColor="@color/orange"
                 android:textSize="18sp"
                 android:textStyle="bold"
+                />
+
+            <ImageView
+                android:id="@+id/btnEdit"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_alignParentEnd="true"
+                android:layout_marginEnd="35dp"
+                android:src="@drawable/baseline_edit_24"
+                />
+
+            <ImageView
+                android:id="@+id/btnDel"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_alignParentEnd="true"
+                android:src="@drawable/delete_forever_24"
                 />
         </RelativeLayout>
 
