adicionado funcoes de copy senha, e dialog delet confirm

--- a/app/src/main/res/layout/activity_vault.xml
+++ b/app/src/main/res/layout/activity_vault.xml
@@ -19,17 +19,24 @@
         android:textColor="@color/orange"
         android:textSize="24sp"
     />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/passHeading"
+        android:layout_marginStart="18dp"
+        android:fontFamily="@font/poppins"
+        android:text="Pressione para copiar a senha."
+        android:textColor="@color/orange"
+        android:textSize="12sp"
+        />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/passRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="60dp"
         android:padding="16dp"
         />
-
-
-
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/addBtn"
