--- a/app/src/main/res/layout/activity_update.xml
+++ b/app/src/main/res/layout/activity_update.xml
@@ -8,7 +8,7 @@
     android:orientation="vertical"
     android:padding="16dp"
     android:layout_marginTop="4dp"
-    tools:context=".UpdateActivity">
+    tools:context=".UpdatePassActivity">
     <TextView
         android:id="@+id/editNoteHeading"
         android:layout_width="wrap_content"
