adicionando senha segura para acesso ao vault

--- a/app/src/main/res/layout/activity_add_password.xml
+++ b/app/src/main/res/layout/activity_add_password.xml
@@ -8,6 +8,7 @@
     android:orientation="vertical"
     android:padding="16dp"
     android:layout_marginTop="4dp"
+    android:background="@color/bg"
     tools:context=".AddPasswordActivity">
     <TextView
         android:id="@+id/addNoteHeading"
@@ -36,18 +37,22 @@
         android:textSize="20sp"
         android:layout_marginTop="16dp"
         android:hint="De onde é a senha?"
+        android:textColorHint="@color/white"
         android:background="@drawable/orange_border"
+        android:textColor="@color/white"
         android:maxLines="1"
         android:fontFamily="@font/poppins" />
     <EditText
         android:id="@+id/contentPassword"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:textColorHint="@color/white"
         android:hint="@string/entre_com_a_senha"
         android:gravity="top"
         android:padding="12dp"
         android:textSize="18sp"
         android:background="@drawable/orange_border"
+        android:textColor="@color/white"
         android:layout_below="@id/titlePassword"
         android:layout_marginTop="12dp"
         android:fontFamily="@font/poppins" />
