--- a/app/src/main/res/layout/activity_update.xml
+++ b/app/src/main/res/layout/activity_update.xml
@@ -8,6 +8,7 @@
     android:orientation="vertical"
     android:padding="16dp"
     android:layout_marginTop="4dp"
+    android:background="@color/bg"
     tools:context=".UpdatePassActivity">
     <TextView
         android:id="@+id/editNoteHeading"
@@ -36,6 +37,8 @@
         android:textSize="20sp"
         android:layout_marginTop="16dp"
         android:hint="De onde é a senha?"
+        android:textColorHint="@color/white"
+        android:textColor="@color/white"
         android:background="@drawable/orange_border"
         android:maxLines="1"
         android:fontFamily="@font/poppins" />
@@ -44,6 +47,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:hint="@string/entre_com_a_senha"
+        android:textColorHint="@color/white"
+        android:textColor="@color/white"
         android:gravity="top"
         android:padding="12dp"
         android:textSize="18sp"
