--- a/app/src/main/res/layout/activity_vault.xml
+++ b/app/src/main/res/layout/activity_vault.xml
@@ -20,6 +20,15 @@
         android:textColor="@color/orange"
         android:textSize="24sp"
     />
+    <ImageView
+        android:id="@+id/backupBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/baseline_backup_24"
+        android:layout_marginEnd="10dp"
+        android:layout_marginTop="15dp"
+        android:layout_alignParentEnd="true"
+        />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
