--- a/app/src/main/res/layout/layout_password.xml
+++ b/app/src/main/res/layout/layout_password.xml
@@ -1,20 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:cardCornerRadius="8dp"
+    android:padding="20dp"
     app:cardElevation="4dp"
-    android:background="@drawable/orange_border"
-    app:cardUseCompatPadding="true">
+    android:orientation="vertical">
 
-<EditText
-    android:id="@+id/passwordEditText"
-    android:layout_width="match_parent"
-    android:layout_height="40dp"
-    android:autofillHints=""
-    android:text=""
-    android:background="@drawable/orange_border"
-    android:inputType="textPassword" />
-</androidx.cardview.widget.CardView>
+
+    <EditText
+        android:id="@+id/passwordEditText"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:background="@drawable/orange_border"
+        android:layout_marginTop="30dp"
+        android:textColorHint="@color/orange"
+        android:paddingStart="7dp"
+        android:hint="Senha"
+        android:inputType="textPassword"/>
+
+    <EditText
+        android:id="@+id/hintEditText"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:textColorHint="@color/orange"
+        android:paddingStart="7dp"
+        android:hint="Sua dica de senha (Opcional)"
+        android:inputType="text"
+        android:textAlignment="textStart"
+        android:background="@drawable/orange_border"
+        android:layout_marginTop="7dp"/>
+</LinearLayout>
