--- a/app/src/main/res/layout/activity_vault.xml
+++ b/app/src/main/res/layout/activity_vault.xml
@@ -22,10 +22,20 @@
     />
     <ImageView
         android:id="@+id/backupBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="42dp"
+        android:layout_height="42dp"
         android:src="@drawable/baseline_backup_24"
         android:layout_marginEnd="10dp"
+        android:layout_marginTop="15dp"
+        android:layout_alignParentEnd="true"
+        />
+
+    <ImageView
+        android:id="@+id/restoreBtn"
+        android:layout_width="42dp"
+        android:layout_height="42dp"
+        android:src="@drawable/baseline_restore_page_24"
+        android:layout_marginEnd="60dp"
         android:layout_marginTop="15dp"
         android:layout_alignParentEnd="true"
         />
