--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -47,9 +47,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
+        android:textColorHint="@color/white"
         android:text="Desenvolvido por Trsm"
         android:textSize="12sp"
         android:layout_alignParentBottom="true"
-        android:textColor="@android:color/holo_orange_dark" />
+        android:textColor="@android:color/white" />
 
 </RelativeLayout>
